--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </nav>
         <h1>Mountains</h1>
         <figure>
-            <img src= "./Mountains.jpg" alt="A picture of mountains showing beautiful colours"><br>
-            <cite>Source:<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Ftandyanderson%2Fmountain-photos%2F&psig=AOvVaw2GRNwMh19sr1Z8vHrU7k8w&ust=1665010060284000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCLDn-vTTx_oCFQAAAAAdAAAAABAE">Tracy (Tandy) Anderson</a></cite>
+            <img src= "./https://2.bp.blogspot.com/-egOH8RkBAu0/UQfDNRSwC9I/AAAAAAAAeps/5Ay3wbD0Ihk/s1600/ice-snowy-rocks-mountains-hd-background-wallpapers-widescreen-high-resolutions-025.jpg" alt="A picture of mountains showing beautiful colours"><br>
+            <cite>Source:<a href="">Kantri papa</a></cite>
         </figure>
     </header>
     <main>
